--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-android:layout_gravity="center_horizontal"
+        android:layout_gravity="center_horizontal"
         android:text="@string/app_name"
         android:textAlignment="center"
         android:textSize="25sp"
@@ -26,7 +26,7 @@ android:layout_gravity="center_horizontal"
         android:id="@+id/circleImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/astrologer_logo_foreground"
+        android:src="@mipmap/ic_launcher"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"/>
 
