--- a/app/src/main/res/menu/bottomnav.xml
+++ b/app/src/main/res/menu/bottomnav.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/home" android:title="@string/home" android:icon="@drawable/ic_baseline_home_24"/>
-    <item android:id="@+id/message" android:title="@string/prediction" android:icon="@drawable/ic_baseline_message_24"/>
+    <item android:id="@+id/contact" android:title="Contact" android:icon="@drawable/ic_baseline_message_24"/>
     <item android:id="@+id/signout" android:title="@string/signout" android:icon="@drawable/ic_outline_power_settings_new_24"/>
 </menu>
